# MyFirstMultithreadingProgram

./: CMakeLists.txt  README.md
src/debug/: log.cpp  log.hpp
src/first/: connection.cpp  connection.hpp  main.cpp  sum_sender.cpp  sum_sender.hpp
src/second/: main.cpp  sum_reciever.cpp  sum_reciever.hpp
